complete shot list with fake data

--- a/app/src/main/res/layout/list_item_shot.xml
+++ b/app/src/main/res/layout/list_item_shot.xml
@@ -73,5 +73,7 @@
         android:id="@+id/shot_clickable_cover"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="?attr/selectableItemBackground"
         android:clickable="true" />
+
 </android.support.v7.widget.CardView>
