--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,13 @@
 <resources>
 
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="alertDialogTheme">@style/AppTheme.Dialog.Alert</item>
+
+        <!--<item name="android:windowTranslucentStatus">true</item>-->
     </style>
 
     <style name="AppTheme.Dialog.Alert" parent="Theme.AppCompat.Light.Dialog.Alert">
@@ -21,4 +23,17 @@
         <item name="android:textStyle">bold</item>
     </style>
 
+    <style name="AppTheme.TextView.Clickable.1" parent="AppTheme.TextView.Clickable">
+        <item name="android:textSize">15sp</item>
+    </style>
+    <style name="AppTheme.TextView.Clickable.1.White" parent="AppTheme.TextView.Clickable.1">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="AppTheme.TextView.Clickable.2" parent="AppTheme.TextView.Clickable">
+        <item name="android:textSize">17sp</item>
+    </style>
+    <style name="AppTheme.TextView.Clickable.2.White" parent="AppTheme.TextView.Clickable.2">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 </resources>
