--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,6 +11,8 @@
 
     <dimen name="fab_margin">16dp</dimen>
 
+    <dimen name="nav_header_height">192dp</dimen>
+
     <dimen name="shot_author_picture_size">48dp</dimen>
     <dimen name="shot_author_picture_radius">24dp</dimen>
 
@@ -20,5 +22,5 @@
 
     <dimen name="loading_progress_bar_size">24dp</dimen>
     <dimen name="loading_item_height">36dp</dimen>
-
+    <dimen name="toolbar_elevation">4dp</dimen>
 </resources>
