mixed_type_recycler_view_for_shot_detail

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="place_holder_bg">#33000000</color>
+    <color name="text_dark">#aa000000</color>
 </resources>
