--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,8 +6,6 @@
         <item name="colorAccent">@color/colorAccent</item>
 
         <item name="alertDialogTheme">@style/AppTheme.Dialog.Alert</item>
-
-        <!--<item name="android:windowTranslucentStatus">true</item>-->
     </style>
 
     <style name="AppTheme.Dialog.Alert" parent="Theme.AppCompat.Light.Dialog.Alert">
@@ -16,8 +14,38 @@
     </style>
 
     <style name="AppTheme.TextView" />
+
+    <style name="AppTheme.TextView.1" parent="AppTheme.TextView">
+        <item name="android:textSize">15sp</item>
+    </style>
+
+    <style name="AppTheme.TextView.1.White" parent="AppTheme.TextView.1">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="AppTheme.TextView.2" parent="AppTheme.TextView">
+        <item name="android:textSize">17sp</item>
+    </style>
+
+    <style name="AppTheme.TextView.2.White" parent="AppTheme.TextView.2">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <style name="AppTheme.TextView.2.Dark" parent="AppTheme.TextView.2">
+        <item name="android:textColor">@color/text_dark</item>
+    </style>
+
+    <style name="AppTheme.TextView.3" parent="AppTheme.TextView">
+        <item name="android:textSize">19sp</item>
+    </style>
+
+    <style name="AppTheme.TextView.3.White" parent="AppTheme.TextView.3">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
     <style name="AppTheme.TextView.Clickable">
         <item name="android:background">?attr/selectableItemBackground</item>
+        <item name="android:padding">@dimen/spacing_small</item>
         <item name="android:textAllCaps">true</item>
         <item name="android:textColor">@color/colorPrimary</item>
         <item name="android:textStyle">bold</item>
@@ -36,4 +64,5 @@
     <style name="AppTheme.TextView.Clickable.2.White" parent="AppTheme.TextView.Clickable.2">
         <item name="android:textColor">@android:color/white</item>
     </style>
+
 </resources>
